--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -164,7 +164,7 @@
     "git": {
       "aFewSecondsAgo": "несколько секунд назад",
       "addSignedOff": "Добавить подписанный",
-      "amendReuseMessag": "Чтобы повторно использовать последнее сообщение фиксации, нажмите 'Enter' или 'Escape' для отмены.",
+      "amendReuseMessage": "Чтобы повторно использовать последнее сообщение фиксации, нажмите 'Enter' или 'Escape' для отмены.",
       "amendRewrite": "Переписать предыдущее сообщение о фиксации. Нажмите 'Enter' для подтверждения или 'Escape' для отмены.",
       "checkoutCreateLocalBranchWithName": "Создайте новый локальный филиал с именем: {0}. Нажмите 'Enter' для подтверждения или 'Escape' для отмены.",
       "checkoutProvideBranchName": "Пожалуйста, укажите название филиала.",
