--- a/packages/core/i18n/nls.ja.json
+++ b/packages/core/i18n/nls.ja.json
@@ -65,6 +65,13 @@
         "next": "次へ(下)",
         "previous": "前へ (上)"
       },
+      "secondaryWindow": {
+        "alwaysOnTop": "有効にすると、セカンダリウィンドウは、異なるアプリケーションを含む他のすべてのウィンドウの上に表示されます。",
+        "description": "抽出されたセカンダリウィンドウの初期位置とサイズを設定する。",
+        "fullSize": "抽出されたウィジェットの位置とサイズは、実行中のTheiaアプリケーションと同じになります。",
+        "halfWidth": "抽出されたウィジェットの位置とサイズは、実行中のTheiaアプリケーションの幅の半分になります。",
+        "originalSize": "抽出されたウィジェットの位置とサイズは、元のウィジェットと同じになる。"
+      },
       "silentNotifications": "通知のポップアップを抑制するかどうかを制御します。",
       "tabDefaultSize": "タブのデフォルトサイズを指定します。",
       "tabMaximize": "ダブルクリック時にタブを最大化するかどうかを制御します。",
@@ -313,6 +320,7 @@
       "autoReveal": "オートリヴェール",
       "clipboardWarn": "クリップボードへのアクセスが拒否されました。ブラウザのアクセス許可を確認してください。",
       "clipboardWarnFirefox": "クリップボードAPIは使用できません。これは、'{1}' ページの '{0}' 環境設定によって有効にすることができます。その後Theiaをリロードしてください。これにより、FireFoxがシステムクリップボードにフルアクセスできるようになります。",
+      "noFolderOpened": "フォルダが開かない",
       "refresh": "エクスプローラーでの更新",
       "reveal": "エクスプローラーでの表示",
       "toggleHiddenFiles": "隠しファイルのトグル"
@@ -401,8 +409,7 @@
       "extract-widget": "セカンダリーウィンドウへの表示移動"
     },
     "shell-area": {
-      "secondary": "セカンダリーウィンドウ",
-      "top": "トップ"
+      "secondary": "セカンダリーウィンドウ"
     },
     "task": {
       "attachTask": "タスクの添付...",
