--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -65,6 +65,13 @@
         "next": "Далее (вниз)",
         "previous": "Предыдущий (Вверх)"
       },
+      "secondaryWindow": {
+        "alwaysOnTop": "Если эта функция включена, вторичное окно остается выше всех остальных окон, в том числе окон различных приложений.",
+        "description": "Устанавливает начальное положение и размер извлеченного вторичного окна.",
+        "fullSize": "Положение и размер извлеченного виджета будут такими же, как и в запущенном приложении Theia.",
+        "halfWidth": "Положение и размер извлеченного виджета будут равны половине ширины запущенного приложения Theia.",
+        "originalSize": "Положение и размер извлеченного виджета будут такими же, как у исходного."
+      },
       "silentNotifications": "Управляет тем, следует ли подавлять всплывающие окна уведомлений.",
       "tabDefaultSize": "Определяет размер по умолчанию для вкладок.",
       "tabMaximize": "Управляет тем, следует ли максимизировать вкладки при двойном щелчке.",
@@ -313,6 +320,7 @@
       "autoReveal": "Автоматическое раскрытие",
       "clipboardWarn": "Доступ к буферу обмена запрещен. Проверьте разрешение вашего браузера.",
       "clipboardWarnFirefox": "API буфера обмена недоступен. Его можно включить с помощью '{0}' предпочтения на странице '{1}'. Затем перезагрузите Theia. Обратите внимание, это позволит FireFox получить полный доступ к системному буферу обмена.",
+      "noFolderOpened": "Папка не открыта",
       "refresh": "Обновить в Проводнике",
       "reveal": "Раскрытие в Проводнике",
       "toggleHiddenFiles": "Переключение скрытых файлов"
@@ -401,8 +409,7 @@
       "extract-widget": "Переместить вид в дополнительное окно"
     },
     "shell-area": {
-      "secondary": "Вторичное окно",
-      "top": "Топ"
+      "secondary": "Вторичное окно"
     },
     "task": {
       "attachTask": "Прикрепите задание...",
