--- a/packages/core/i18n/nls.hu.json
+++ b/packages/core/i18n/nls.hu.json
@@ -65,6 +65,13 @@
         "next": "Következő (lefelé)",
         "previous": "Előző (fel)"
       },
+      "secondaryWindow": {
+        "alwaysOnTop": "Ha engedélyezve van, a másodlagos ablak minden más ablak fölött marad, beleértve a különböző alkalmazások ablakait is.",
+        "description": "A kivont másodlagos ablak kezdeti pozíciójának és méretének beállítása.",
+        "fullSize": "A kivont widget pozíciója és mérete megegyezik a futó Theia alkalmazáséval.",
+        "halfWidth": "A kivont widget pozíciója és mérete a futó Theia alkalmazás szélességének fele lesz.",
+        "originalSize": "A kivont widget pozíciója és mérete megegyezik az eredeti widgetével."
+      },
       "silentNotifications": "Beállítja, hogy az értesítések felugró ablakai el legyenek-e nyomva.",
       "tabDefaultSize": "Megadja a lapok alapértelmezett méretét.",
       "tabMaximize": "Szabályozza, hogy a lapok dupla kattintásra maximalizálódjanak-e.",
@@ -313,6 +320,7 @@
       "autoReveal": "Automatikus felfedés",
       "clipboardWarn": "A vágólaphoz való hozzáférés megtagadva. Ellenőrizze a böngésző engedélyeit.",
       "clipboardWarnFirefox": "A vágólap API nem érhető el. A '{0}' beállítással engedélyezhető a '{1}' oldalon. Ezután töltse be újra a Theia-t. Figyelem, ez lehetővé teszi, hogy a FireFox teljes hozzáférést kapjon a rendszer vágólapjához.",
+      "noFolderOpened": "Nincs megnyitott mappa",
       "refresh": "Frissítés az Explorerben",
       "reveal": "Feltárása az Explorerben",
       "toggleHiddenFiles": "Rejtett fájlok kapcsolása"
@@ -401,8 +409,7 @@
       "extract-widget": "Nézet áthelyezése másodlagos ablakba"
     },
     "shell-area": {
-      "secondary": "Másodlagos ablak",
-      "top": "Tetejére"
+      "secondary": "Másodlagos ablak"
     },
     "task": {
       "attachTask": "Feladat csatolása...",
